areglo de reposrtes y otros al 98%